# Chess

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/agents/: eval-runner.md
.claude/commands/: add-puzzle-fixture.md  run-eval.md
.claude/hooks/: post_edit.py  stop_check.py
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-07-14T10-17-08-997Z.yml  page-2026-07-14T10-17-27-350Z.yml  page-2026-07-14T10-17-39-660Z.yml
docs/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  architecture.md
pipeline/: CLAUDE.md  README.md  pyproject.toml
pipeline/src/pipeline/: board.py  checks.py  engine.py  eval_report.py  grading.py  judge.py  judge_eval.py  judge_gate.py  label.py  label_page.html  label_web.py  llm.py  metrics.py  prompts.py  puzzles.py  run_eval.py  sample_puzzles.py  sampler.py
pipeline/tests/: test_board.py  test_checks.py  test_engine.py  test_grading.py  test_judge.py  test_judge_gate.py  test_label.py  test_label_web.py  test_metrics.py  test_prompts.py  test_puzzles.py  test_run_eval.py  test_sample_cli.py  test_sampler.py
pipeline/tests/fixtures/: puzzles_sample.csv
prompts/: explain.v1.json  explain.v2.json  judge.v1.json
vision/: CLAUDE.md  GATE_REPORT.md  PIECE_LICENSES.json  README.md  pyproject.toml
vision/src/vision/: boardfix.py  build.py  dataset.py  pieces.py  positions.py  render.py  screenshot_eval.py  sprites.py  train.py
vision/tests/: test_boardfix.py  test_dataset.py  test_positions.py  test_render.py
web/: .dev.vars.example  CLAUDE.md  README.md  eslint.config.mjs  next.config.ts  package.json  wrangler.jsonc
web/public/: _headers  turnstile.html
web/public/models/: squarenet-v5.int8.onnx
web/scripts/: copy-engine.mjs  copy-ort.mjs
web/src/app/: globals.css  layout.tsx  (+1 more)
web/worker/: budget.ts  index.ts  tsconfig.json
(+37 files in other folders)
