[project]
name = "pipeline"
version = "0.1.0"
description = "Offline pipeline: data parsing, feature extraction, embeddings, and the eval harness"
readme = "README.md"
authors = [
    { name = "jianrontan", email = "116509027+jianrontan@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "python-chess>=1.999",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
